# RPI_MediaServer

./: .clinerules  .gitignore  CMakeLists.txt  README.md  build.sh  config.ini  keep.txt  mediamtx.yml  start-wfrec.sh  start.sh
docs/: 00README.md  01REQUIREMENTS.md  02ENVIRONMENT.md  03TASKS.md  04ISSUES.md  05MANUAL.md  AGENTS.md  AI-PATCH-MixIssue.md  architecture.md  development-status.md  issue-notes.md  operations-guide.md  operator-guide.md  setup.md  source_analysis.md  user-guide.md
docs/03-development/: hailo-integration.md
src/: main.cpp
src/ai/: detector.cpp  detector.hpp  types.hpp
src/pipeline/: pipeline.cpp  pipeline.hpp
src/utils/: config.cpp  config.hpp  logger.cpp  logger.hpp  screen_capture.cpp  screen_capture.hpp
systemd/: mediamtx.service
systemd/user/: wf-recorder.service
web/: app.js  index.html  style.css
